# Calc-Application-Andorid

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: calc-jni.c  calc_with_power.c  calc_with_power_test.c  hello-jni.c  stack.c  test1.cpp  test2.cpp  test2.h
app/src/main/cpp/include/: calc.h  stack.h
app/src/main/java/com/example/calcapplication/: MainActivity.java
app/src/main/jni/: calc-jni.h  hello-jni.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
